--- a/mvc2/validation/src/main/resources/templates/validation/v1/addForm.html
+++ b/mvc2/validation/src/main/resources/templates/validation/v1/addForm.html
@@ -40,7 +40,7 @@
         <div>
             <label for="price" th:text="#{label.item.price}">가격</label>
             <input type="text" id="price" th:field="*{price}"
-                   th:class="${errors?.containsKey('itemName')}?'form-control field-error':'form-control'"
+                   th:class="${errors?.containsKey('price')}?'form-control field-error':'form-control'"
                    class="form-control" placeholder="가격을 입력하세요">
             <div class="field-error" th:if="${errors?.containsKey('price')}" th:text="${errors['price']}">
                 가격 오류
@@ -49,7 +49,7 @@
         <div>
             <label for="quantity" th:text="#{label.item.quantity}">수량</label>
             <input type="text" id="quantity" th:field="*{quantity}"
-                   th:class="${errors?.containsKey('itemName')}?'form-control field-error':'form-control'"
+                   th:class="${errors?.containsKey('quantity')}?'form-control field-error':'form-control'"
                    class="form-control" placeholder="수량을 입력하세요">
             <div class="field-error" th:if="${errors?.containsKey('quantity')}" th:text="${errors['quantity']}">
                 수량 오류
